# backer

./: Cargo.toml  README.md  preview.txt  summary.txt
.obsidian/: workspace.json
src/: config.rs  ctx_string.rs  default.toml  fs.rs  main.rs  opt.rs  runner.rs
src/config/: ctx_string.rs  error.rs  preview.rs  processed.rs  raw.rs  run.rs  runner.rs
src/config/ctx_string/: parser.rs  tests.rs
src/ctx_string/: error.rs
src/fs/: error.rs
src/runner/: error.rs
