[package]
name = "backer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
error-stack = "0.4.1"
nom = "7.1.3"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
